--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,13 @@
 body {
-  background-color: #fff;
+  background-image: image-url('home.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
   margin: 33px;
+  min-height: 100%;
 }
 
 p, ol, ul, td {
@@ -28,9 +31,9 @@ a {
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    cursor:pointer
   }
+
 }
 
 th {
@@ -97,3 +100,60 @@ label {
     text-align: center;
 }
 
+.logout {
+    color: red;
+    right: initial;
+    padding-left: 96%;
+
+}
+
+.join-button {
+     color: green;
+}
+.rules-text {
+  width: 50%;
+  text-align: left;
+  font-style: italic;
+  font-weight: 600;
+}
+
+th, td {
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+  font-size: 150%;
+}
+
+tr:hover {background-color: #f5f5f5}
+
+.inner-page  {
+    overflow: hidden;
+    text-align: left;
+}
+.inner-page:before {
+    content: "";
+    position: absolute;
+    width : 100%;
+    height: 100%;
+    background: inherit;
+    z-index: -1;
+
+    filter        : blur(10px);
+    -moz-filter   : blur(10px);
+    -webkit-filter: blur(10px);
+    -o-filter     : blur(10px);
+
+    transition        : all 2s linear;
+    -moz-transition   : all 2s linear;
+    -webkit-transition: all 2s linear;
+    -o-transition     : all 2s linear;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+table.event-table {
+  margin-top: 30px;
+}
