--- a/app/views/splitwises/index.html.erb
+++ b/app/views/splitwises/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Splitwises</h1>
+<h1>Kochu Pusthakam</h1>
 
 <table>
   <thead>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Splitwise', new_splitwise_path %>
+<%= link_to 'New entry to Kochu pusthakam', new_splitwise_path %>
