analytics page filter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%else%>
         <%= link_to 'Events', events_path, class: 'menu'%>
       <%end%>
+      | <%= link_to 'Analytics', analysis_splitwises_path, class: 'menu'%>
     <%end%>
     <%= yield %>
   </body>
