--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -1,7 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Kochu Pusthakam</h1>
-
+<p>
+  <%= form_tag analysis_splitwises_path, method: 'get' do %>
+     <%= select_month(@date_time || Date.today) %>
+     <%= select_year(@date_time || Date.today, :start_year => Date.today.year, :end_year => 8.years.from_now.year) %>
+     <%= submit_tag "Search"%>
+  <% end %>
+</p>
 <table>
   <thead>
     <tr>
