Fixed changes for analysis page

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -157,3 +157,19 @@ img {
 table.event-table {
   margin-top: 30px;
 }
+
+.analytics-left {
+  float:left;
+  width:auto;
+}
+
+.analytics-mid {
+  float:left;
+  width:auto;
+}
+
+.analytics-mid-inner {
+  float:left;
+  width:auto;
+  margin-left:35px;
+}
