--- a/app/assets/stylesheets/splitwises.scss
+++ b/app/assets/stylesheets/splitwises.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the splitwises controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.analytics-left {
+  float:left;
+  width:auto;
+}
+
+.analytics-mid {
+  float:left;
+  width:auto;
+}
+
+.analytics-mid-inner {
+  float:left;
+  width:auto;
+  margin-left:35px;
+}
