--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
   </head>
 
   <body class='inner-page'>
-    <%if current_user%>
-      <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'logout') %>
-      <%= link_to 'splitwise', splitwises_path, class: 'menu'%>
-      | <%= link_to 'Events', events_path, class: 'menu'%>
-      | <%= link_to 'Analytics', analysis_splitwises_path, class: 'menu'%>
-    <%end%>
+    <div>
+      <%if current_user%>
+        <%= link_to('Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'logout') %>
+        <%= link_to 'splitwise', splitwises_path, class: 'menu'%>
+        | <%= link_to 'Events', events_path, class: 'menu'%>
+        | <%= link_to 'Analytics', analysis_splitwises_path, class: 'menu'%>
+      <%end%>
+    </div>
     <%= yield %>
   </body>
 </html>
