--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -6,7 +6,7 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  margin: 33px;
+  padding: 30px;
   min-height: 100%;
 }
 
@@ -126,9 +126,16 @@ th {
 }
 
 tr:hover {background-color: #f5f5f5}
-
+tbody{
+  tr {
+    &:last-child {
+      th {
+        border-top: 3px solid red;
+      }
+    }
+  }
+}
 .inner-page  {
-    overflow: hidden;
     text-align: left;
 }
 .inner-page:before {
@@ -161,6 +168,7 @@ table.event-table {
 .analytics-left {
   float:left;
   width:auto;
+  padding: 20px 10px;
 }
 
 .analytics-mid {
@@ -171,5 +179,13 @@ table.event-table {
 .analytics-mid-inner {
   float:left;
   width:auto;
-  margin-left:35px;
+  padding: 20px 10px;
+}
+
+.analysis{
+  background-color: #f5f5f5
+}
+
+.entry {
+  color: red;
 }
