--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,5 @@
 <div class='analysis'>
+    <p id="error"><%= flash[:error] %></p>
 	<%if @events.blank?%>
 	  Nothing to Display
 	<%else%>
@@ -14,12 +15,17 @@
 	        </tr>
 	    </table>
 	    <table>
-			    <%event.groups.each do |group|%>
+			    <%event.groups.order(:id).each do |group|%>
 		        <tr>
 			        <td><%= group.name%></td>
 			        <%group.users.each do |user|%>
 			            <% remaining_users = event.max_no_of_user_per_group - group.users.size + 1%>
 			            <td colspan=<%=remaining_users%>><%=user.first_name%> <%= user.last_name%></td>
+			        <%end%>
+			        <%if group.turn_active?%>
+			          <td><%= group.event_date%></td>
+			          <td><%= group.slot%></td>
+			          <td><%=link_to 'Mark As complete', completed_event_group_path(event, group), method: :put, class: 'join-button'%></td>
 			        <%end%>
 			      </tr>
 		      <%end%>
