--- a/app/views/splitwises/_form.html.erb
+++ b/app/views/splitwises/_form.html.erb
@@ -13,7 +13,7 @@
   <table>
     <tr>
       <td>Purchased ON:</td>
-      <td><%= f.datetime_local_field :purchased_at %></td>
+      <td><%= f.text_field :purchased_at %></td>
     </tr>
     <tr>
       <td>Item Name:</td>
