--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -163,6 +163,7 @@ img {
 }
 table.event-table {
   margin-top: 30px;
+  max-width: 600px;
 }
 
 .analytics-left {
@@ -183,7 +184,11 @@ table.event-table {
 }
 
 .analysis{
-  background-color: #f5f5f5
+  background-color: #f5f5f5;
+  max-width: 75%;
+  margin-left: 10%;
+  font-family: sans-serif;
+  font-weight: 500;
 }
 
 .entry {
