--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -5,7 +5,7 @@
   <%= form_tag analysis_splitwises_path, method: 'get' do %>
      <%= select_month(@date_time || Date.today) %>
      <%= select_year(@date_time || Date.today, :start_year => Date.today.year, :end_year => 8.years.from_now.year) %>
-     <%= submit_tag "Search"%>
+     <%= submit_tag "Apply"%>
   <% end %>
 </p>
 <div class='analysis'>
