--- a/app/views/splitwises/index.html.erb
+++ b/app/views/splitwises/index.html.erb
@@ -1,7 +1,8 @@
 <div class='analysis'>
   <p id="notice"><%= notice %></p>
 
-  <h1>Kochu Pusthakam</h1>
+  <h1>Splitwise</h1>
+  <%= link_to 'New entry to Kochu pusthakam', new_splitwise_path, class: 'entry btn btn-primary btn-sm' %>
   <p>
     <%= form_tag splitwises_path, method: 'get' do %>
        <%= select_month(@date_time || Date.today) %>
@@ -9,10 +10,13 @@
        <%= submit_tag "Apply"%>
     <% end %>
   </p>
-  <table>
+  <table class="table table-striped">
     <thead>
       <tr>
-        <th colspan="3"></th>
+        <th> Date </th>
+        <th> Paid By </th>
+        <th> Amount </th>
+        <th colspan="3" class="text-center"> Actions</th>
       </tr>
     </thead>
 
@@ -22,14 +26,17 @@
           <td><%= splitwise.purchased_at%></td>
           <td><%= splitwise.purchasee.first_name%></td>
           <td><%= splitwise.price%></td>
-          <td><%= link_to 'Show', splitwise %></td>
-          <td><%= link_to 'Edit', edit_splitwise_path(splitwise) %></td>
-          <td><%= link_to 'Destroy', splitwise_path(splitwise), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td>
+              <%= link_to 'Show', splitwise, class: 'btn btn-success' %>
+          </td>
+          <td>
+              <%= link_to 'Edit', edit_splitwise_path(splitwise), class: 'btn btn-warning' %>
+          </td>
+          <td>
+              <%= link_to 'Destroy', splitwise_path(splitwise), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+          </td>
         </tr>
       <% end %>
     </tbody>
   </table>
-
-  <br>
-  <%= link_to 'New entry to Kochu pusthakam', new_splitwise_path, class: 'entry' %>
 </div>
