--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -189,6 +189,9 @@ table.event-table {
   margin-left: 10%;
   font-family: sans-serif;
   font-weight: 500;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
 }
 
 .entry {
