--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class='analysis'>
+<div class="container analysis">
     <p id="error"><%= flash[:error] %></p>
 	<%if @events.blank?%>
 	  Nothing to Display
