--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,16 @@
 
   <body class='inner-page'>
     <%if current_user%>
-      <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <%= link_to 'splitwise', splitwises_path, class: 'nav-link'%>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Events', events_path, class: 'nav-link'%>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Analytics', analysis_splitwises_path, class: 'nav-link'%>
-        </li>
-        <li class="nav-item">
-          <%= link_to('Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'nav-link') %>
+      <ul class="nav nav-pills">
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Menu</a>
+          <div class="dropdown-menu">
+            <%= link_to 'splitwise', splitwises_path, class: 'dropdown-item'%>
+            <%= link_to 'Events', events_path, class: 'dropdown-item'%>
+            <%= link_to 'Analytics', analysis_splitwises_path, class: 'dropdown-item'%>
+            <div class="dropdown-divider"></div>
+              <%= link_to('Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'dropdown-item') %>
+            </div>
         </li>
       </ul>
     <%end%>
