--- a/app/views/splitwises/index.html.erb
+++ b/app/views/splitwises/index.html.erb
@@ -11,8 +11,14 @@
     <% end %>
   </p>
 
+  <div class="container">
+
+
+
+  </div>
+
   <% @splitwises.each do |splitwise| %>
-    <div class="card text-center">
+    <div class="card text-center w-75 margin-bottom-5">
       <div class="card-header">
         <%= splitwise.purchasee.first_name%>
       </div>
