--- a/app/views/splitwises/index.html.erb
+++ b/app/views/splitwises/index.html.erb
@@ -1,36 +1,32 @@
-<div class='analysis'>
-  <p id="notice"><%= notice %></p>
-
-  <h1>Splitwise</h1>
-  <%= link_to 'New entry to Kochu pusthakam', new_splitwise_path, class: 'entry btn btn-primary btn-sm' %>
-  <p>
-    <%= form_tag splitwises_path, method: 'get' do %>
-       <%= select_month(@date_time || Date.today) %>
-       <%= select_year(@date_time || Date.today, :start_year => Date.today.year, :end_year => 8.years.from_now.year) %>
-       <%= submit_tag "Apply"%>
-    <% end %>
-  </p>
-
+<div class="analysis">
   <div class="container">
-
-
-
+    <p id="notice"><%= notice %></p>
+    <h1>Splitwise</h1>
+    <%= link_to 'New entry to Kochu pusthakam', new_splitwise_path, class: 'entry btn btn-primary btn-sm' %>
+    <p>
+      <%= form_tag splitwises_path, method: 'get' do %>
+         <%= select_month(@date_time || Date.today) %>
+         <%= select_year(@date_time || Date.today, :start_year => Date.today.year, :end_year => 8.years.from_now.year) %>
+         <%= submit_tag "Apply"%>
+      <% end %>
+    </p>
   </div>
-
-  <% @splitwises.each do |splitwise| %>
-    <div class="card text-center w-75 margin-bottom-5">
-      <div class="card-header">
-        <%= splitwise.purchasee.first_name%>
+  <div class="container pl-50 pr-50">
+    <% @splitwises.each do |splitwise| %>
+      <div class="card text-center w-75 mb-2">
+        <div class="card-header">
+          <%= splitwise.purchasee.first_name%>
+        </div>
+        <div class="card-block">
+          <h4 class="card-title"><%= splitwise.price%></h4>
+          <%= link_to 'Show', splitwise, class: 'btn btn-success' %>
+          <%= link_to 'Edit', edit_splitwise_path(splitwise), class: 'btn btn-warning' %>
+          <%= link_to 'Destroy', splitwise_path(splitwise), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+        </div>
+        <div class="card-footer text-muted">
+          <%= splitwise.purchased_at%>
+        </div>
       </div>
-      <div class="card-block">
-        <h4 class="card-title"><%= splitwise.price%></h4>
-        <%= link_to 'Show', splitwise, class: 'btn btn-success' %>
-        <%= link_to 'Edit', edit_splitwise_path(splitwise), class: 'btn btn-warning' %>
-        <%= link_to 'Destroy', splitwise_path(splitwise), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-      </div>
-      <div class="card-footer text-muted">
-        <%= splitwise.purchased_at%>
-      </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
