--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,9 +1,11 @@
+*{
+  font-family: 'Open Sans', sans-serif;
+}
 body {
   background-image: image-url('home.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
   padding: 30px;
@@ -11,7 +13,6 @@ body {
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
   margin: 33px;
