--- a/app/views/splitwises/show.html.erb
+++ b/app/views/splitwises/show.html.erb
@@ -34,8 +34,7 @@
          <span><%= @splitwise.creator.first_name%></span>
       </li>
     </ul>
-
-    <div class="btn-group mt-20" role="group" aria-label="Basic example">
+    <div class="btn-group" role="group" aria-label="Basic example">
         <%= link_to 'Edit', edit_splitwise_path(@splitwise), class: 'btn btn-primary' %>
         <%= link_to 'Back', splitwises_path , class: 'btn btn-primary'%>
     </div>
