Added grid class

--- a/app/views/splitwises/index.html.erb
+++ b/app/views/splitwises/index.html.erb
@@ -14,8 +14,8 @@
   <div class="container pl-50 pr-50">
     <div class="row">
       <% @splitwises.each do |splitwise| %>
-        <div class="col-md-4">
-          <div class="card text-center w-75 mb-2">
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="card text-center w-90 mb-2">
             <div class="card-header">
               <%= splitwise.purchasee.first_name%>
             </div>
